force-app/main/default/objects/Animal360_Indicator_Value_Option__mdt/Animal360_Indicator_Value_Option__mdt.object-meta.xml
<CustomObject>
    <description
  >Packaged picklist options used by picklist-style indicators.</description>
    <label>Animal360 Indicator Value Option</label>
    <pluralLabel>Animal360 Indicator Value Options</pluralLabel>
</CustomObject>