force-app/main/default/objects/Animal360_Indicator_Value_Option__mdt/fields/Default_Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Default_Severity_Level__c</fullName>
    <description
  >Optional default severity hint associated with the option.</description>
    <label>Default Severity Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>