force-app/main/default/objects/Animal360_Indicator_Value_Option__mdt/fields/Indicator_Key__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Key__c</fullName>
    <description>Indicator key that owns the option.</description>
    <label>Indicator Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>