force-app/main/default/objects/Animal360_Indicator_Value_Option__mdt/fields/Option_Label__c.field-meta.xml
<CustomField>
    <fullName>Option_Label__c</fullName>
    <description>Displayed option label.</description>
    <label>Option Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>