force-app/main/default/objects/Animal360_Indicator_Value_Option__mdt/fields/Option_Value__c.field-meta.xml
<CustomField>
    <fullName>Option_Value__c</fullName>
    <description>Stored option value.</description>
    <label>Option Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>